Updated Google Chrome Dev to version 97.0.4688.2.

--- a/manifests/g/Google/Chrome/Dev/97.0.4688.2/Google.Chrome.Dev.installer.yaml
+++ b/manifests/g/Google/Chrome/Dev/97.0.4688.2/Google.Chrome.Dev.installer.yaml
@@ -1,8 +1,6 @@
-# Created with YamlCreate.ps1 v2.0.0 $debug=QUSU.7-1-5
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
-
 PackageIdentifier: Google.Chrome.Dev
-PackageVersion: 97.0.4681.0
+PackageVersion: 97.0.4688.2
 InstallerLocale: en-US
 Platform:
 - Windows.Desktop
@@ -25,11 +23,12 @@ FileExtensions:
 Installers:
 - Architecture: x64
   InstallerUrl: https://dl.google.com/tag/s/dl/chrome/install/dev/googlechromedevstandaloneenterprise64.msi
-  InstallerSha256: C9144944D062122358F971909F5819FDA2895C714499A1E44BB4E4F27A88E57A
-  ProductCode: '{ADDFCE2A-CE85-38BB-A9A8-708305D3EC6B}'
+  InstallerSha256: 1126AEFA5B2014EBAA1B2FAAE5B51B711287E6F85D15EEA525FF55CF57FC23AF
+  ProductCode: "{42F9D99E-972D-338D-9F16-E4D577FFD28E}"
 - Architecture: x86
   InstallerUrl: https://dl.google.com/tag/s/dl/chrome/install/dev/googlechromedevstandaloneenterprise.msi
-  InstallerSha256: C4135A1ED46E8BCF8B8087DE92C1A1FEBE17765CAAEE8FC55A2C9414A484FB29
-  ProductCode: '{223911A7-0993-3E28-8B77-15E5CED17881}'
+  InstallerSha256: 5EE7423431499AA34D0546F896A9A8D466E55F0E4216B7CDDD17A8EFCCAB6519
+  ProductCode: "{6E375EB3-2F2B-34F2-8585-1E8D71F8A8DA}"
 ManifestType: installer
 ManifestVersion: 1.0.0
+
