--- a/manifests/g/Google/Chrome/Dev/97.0.4688.2/Google.Chrome.Dev.locale.en-US.yaml
+++ b/manifests/g/Google/Chrome/Dev/97.0.4688.2/Google.Chrome.Dev.locale.en-US.yaml
@@ -1,8 +1,6 @@
-# Created with YamlCreate.ps1 v2.0.0 $debug=QUSU.7-1-5
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
-
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultlocale.1.0.0.schema.json
 PackageIdentifier: Google.Chrome.Dev
-PackageVersion: 97.0.4681.0
+PackageVersion: 97.0.4688.2
 PackageLocale: en-US
 Publisher: Google LLC
 PublisherUrl: https://www.google.com
@@ -28,3 +26,4 @@ Tags:
 - dev
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
+
