--- a/manifests/k/Kamua/TinyVid/1.0.1/Kamua.TinyVid.locale.en-US.yaml
+++ b/manifests/k/Kamua/TinyVid/1.0.1/Kamua.TinyVid.locale.en-US.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.0.0 using YAML parsing
+# Created with YamlCreate.ps1 v2.0.0 $debug=AUSU.5-1-19041-1320
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: Kamua.TinyVid
-PackageVersion: 0.17.0
+PackageVersion: 1.0.1
 PackageLocale: en-US
 Publisher: Kamua
 PublisherUrl: https://kamua.com
@@ -14,7 +14,10 @@ PackageUrl: https://kamua.com/tinyvid
 License: Proprietary
 LicenseUrl: https://kamua.com/blog/terms-of-use/
 Copyright: Copyright (c) 2021 Kamua
+# CopyrightUrl: 
 ShortDescription: Simple to use video trimmer & compressor
+# Description: 
 Moniker: tinyvid
+# Tags: 
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
