--- a/manifests/k/KDE/Dolphin/21.04.3/KDE.Dolphin.installer.yaml
+++ b/manifests/k/KDE/Dolphin/21.04.3/KDE.Dolphin.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: KDE.Dolphin
-PackageVersion: 21.04.3
+PackageVersion: master-1255
 Scope: machine
 InstallModes:
 - interactive
@@ -10,7 +10,7 @@ InstallModes:
 Installers:
 - Architecture: x64
   InstallerType: nullsoft
-  InstallerUrl: https://binary-factory.kde.org/job/Dolphin_Release_win64/1255/artifact/dolphin-21.04.3-1255-windows-msvc2019_64-cl.exe
+  InstallerUrl: https://binary-factory.kde.org/view/Windows%2064-bit/job/Dolphin_Release_win64/lastSuccessfulBuild/artifact/dolphin-21.04.3-1255-windows-msvc2019_64-cl.exe
   InstallerSha256: C5FE5779291D5093819AE3153AC0254426F4EFCF188CC8FB32FA73E614F58933
 ManifestType: installer
 ManifestVersion: 1.0.0
