--- a/manifests/k/KDE/Dolphin/21.04.3/KDE.Dolphin.installer.yaml
+++ b/manifests/k/KDE/Dolphin/21.04.3/KDE.Dolphin.installer.yaml
@@ -1,7 +1,7 @@
 # Created using wingetcreate 0.4.1.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
-PackageIdentifier: KDE.Dolphin
+PackageIdentifier: KDE.Dolphin.Release
 PackageVersion: master-1255
 Scope: machine
 InstallModes:
