--- a/manifests/k/KDE/Kate/21.08.2/KDE.Kate.installer.yaml
+++ b/manifests/k/KDE/Kate/21.08.2/KDE.Kate.installer.yaml
@@ -1,14 +1,14 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
-PackageIdentifier: KDE.Kate
-PackageVersion: 21.08.2
-MinimumOSVersion: 10.0.0.0
-InstallerType: nullsoft
-Scope: machine
+PackageIdentifier: KDE.Kate.Release
+PackageVersion: master-1459
+MinimumOSVersion: 
+InstallerType: 
+Scope: 
 UpgradeBehavior: install
-Installers:
+Installers: 
 - Architecture: x64
-  InstallerUrl: https://binary-factory.kde.org/view/Windows%2064-bit/job/Kate_Release_win64/1456/artifact/kate-21.08.2-1456-windows-msvc2019_64-cl.exe
-  InstallerSha256: D95F20BE05A06358090201A956D608DD0457CC7916A159403F83E671D7F045A7
+  InstallerUrl: https://binary-factory.kde.org/view/Windows%2064-bit/job/Kate_Release_win64/lastSuccessfulBuild/artifact/kate-21.08.2-1459-windows-msvc2019_64-cl-sideload.appx
+  InstallerSha256: f8692d5dfd0bc6760926579dcab927d545671cc346126f3b71ea6cd598a8e732
 ManifestType: installer
 ManifestVersion: 1.0.0
 
