--- a/manifests/k/KDE/Kate/21.08.2/KDE.Kate.installer.yaml
+++ b/manifests/k/KDE/Kate/21.08.2/KDE.Kate.installer.yaml
@@ -2,7 +2,7 @@
 PackageIdentifier: KDE.Kate.Release
 PackageVersion: master-1459
 MinimumOSVersion: 
-InstallerType: 
+InstallerType: appx
 Scope: 
 UpgradeBehavior: install
 Installers: 
