--- a/manifests/s/ScratchForDiscord/ScratchForDiscord/2.0.1/ScratchForDiscord.ScratchForDiscord.locale.en-US.yaml
+++ b/manifests/s/ScratchForDiscord/ScratchForDiscord/2.0.1/ScratchForDiscord.ScratchForDiscord.locale.en-US.yaml
@@ -12,7 +12,7 @@ Author: DevAndromeda
 PackageName: Scratch For Discord
 PackageUrl: https://github.com/scratch-for-discord/scratch-for-discord-app
 License: MIT
-LicenseUrl: https://github.com/scratch-for-discord/scratch-for-discord-app/blob/master/LICENSE
+# LicenseUrl: https://github.com/scratch-for-discord/scratch-for-discord-app/blob/master/LICENSE (removed from repository)
 Copyright: Copyright (c) 2021 Snowflake Studio
 # CopyrightUrl: 
 ShortDescription: Build your own discord bot with scratch blocks.
