--- a/manifests/m/Microsoft/OneDrive/Internal/Fast/21.211.1011.0001/Microsoft.OneDrive.Internal.Fast.installer.yaml
+++ b/manifests/m/Microsoft/OneDrive/Internal/Fast/21.211.1011.0001/Microsoft.OneDrive.Internal.Fast.installer.yaml
@@ -1,3 +1,4 @@
+# Package has been moved from Microsoft.OnedriveInternalFast
 PackageIdentifier: Microsoft.OneDrive.Internal.Fast
 PackageVersion: 21.211.1011.0001
 Installers:
