--- a/manifests/b/beekeeper-studio/beekeeper-studio/2.1.5/beekeeper-studio.beekeeper-studio.installer.yaml
+++ b/manifests/b/beekeeper-studio/beekeeper-studio/2.1.5/beekeeper-studio.beekeeper-studio.installer.yaml
@@ -13,7 +13,7 @@ InstallModes:
 UpgradeBehavior: install
 Installers:
 - Architecture: x64
-  InstallerUrl: https://github.com/beekeeper-studio/beekeeper-studio/releases/download/v2.1.5/Beekeeper-Studio-2.1.5-portable.exe
-  InstallerSha256: 5CBF3A0C15C6201D14784AA88ACBE787F70E7676FECC4555325959F3196A0446
+  InstallerUrl: https://github.com/beekeeper-studio/beekeeper-studio/releases/download/v2.1.5/Beekeeper-Studio-Setup-2.1.5.exe
+  InstallerSha256: 232d7c6e1411d5cf551aee9b0a4e2cedf3f55fc96baa961a5a0eb6c52580cfea
 ManifestType: installer
 ManifestVersion: 1.0.0
