--- a/manifests/v/Velocidex/Velociraptor/0.62.2/Velocidex.Velociraptor.installer.yaml
+++ b/manifests/v/Velocidex/Velociraptor/0.62.2/Velocidex.Velociraptor.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: Velocidex.Velociraptor
-PackageVersion: 0.6.2
+PackageVersion: 0.62.2
 InstallerLocale: en-US
 MinimumOSVersion: 10.0.0.0
 InstallerType: msi
@@ -15,7 +15,7 @@ UpgradeBehavior: install
 ProductCode: '{8009F1EA-2E04-45C5-A7ED-541B3958AA31}'
 Installers:
 - Architecture: x64
-  InstallerUrl: https://github.com/Velocidex/velociraptor/releases/download/v0.6.2/velociraptor-v0.6.2-windows-386.exe
-  InstallerSha256: 9904A1115BFF884BA40E60B80C00DC1E79D94A5FCFE139FD768A9CB34224363F
+  InstallerUrl: https://github.com/Velocidex/velociraptor/releases/download/v0.6.2/velociraptor-v0.6.2-windows-amd64.msi
+  InstallerSha256: 971ba8f87bfb3afb45ea516fb46a7ec869ec2fe9b9711b31cc8ce92bab530a53
 ManifestType: installer
 ManifestVersion: 1.0.0
