--- a/manifests/d/DigiDNA/iMazing/2.14.5.0/DigiDNA.iMazing.locale.en-US.yaml
+++ b/manifests/d/DigiDNA/iMazing/2.14.5.0/DigiDNA.iMazing.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: 2.14.5.0
 PackageLocale: en-US
 Publisher: DigiDNA SARL
 PublisherUrl: https://digidna.ch
-PublisherSupportUrl: https://support.imazing.com/hc/en-us
+# PublisherSupportUrl: https://support.imazing.com/hc/en-us
 PrivacyUrl: https://imazing.com/privacy-policy
 Author: DigiDNA SARL
 PackageName: iMazing
