Opera.Opera version 80.0.4170.63

--- a/manifests/o/Opera/Opera/80.0.4170.63/Opera.Opera.locale.nb-NO.yaml
+++ b/manifests/o/Opera/Opera/80.0.4170.63/Opera.Opera.locale.nb-NO.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.0.0 $debug=QUSU.7-1-5
+# Created using wingetcreate 0.4.2.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.0.0.schema.json
 
 PackageIdentifier: Opera.Opera
@@ -17,8 +17,8 @@ Copyright: © 1995-2021 Opera Norway
 CopyrightUrl: https://www.opera.com/no/eula/computers/row
 ShortDescription: Opera nettleseren inneholder alt du trenger for privat, trygg og effektiv surfing, sammen med en rekke unike funksjoner for å forbedre mulighetene dine online.
 Description: Opera er en nettleser med flere plattformer utviklet av Opera Software. Opera er en krombasert nettleser. Den skiller seg fra andre nettlesere gjennom brukergrensesnittet, funksjonaliteten og andre funksjoner.
-# Moniker: 
 Tags:
 - nettleser
 ManifestType: locale
 ManifestVersion: 1.0.0
+
