--- a/manifests/o/Opera/Opera/80.0.4170.63/Opera.Opera.installer.yaml
+++ b/manifests/o/Opera/Opera/80.0.4170.63/Opera.Opera.installer.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.0.0 $debug=QUSU.7-1-5
+# Created using wingetcreate 0.4.2.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.0.0.schema.json
 
 PackageIdentifier: Opera.Opera
@@ -6,7 +6,6 @@ PackageVersion: 80.0.4170.63
 Platform:
 - Windows.Desktop
 MinimumOSVersion: 10.0.0.0
-InstallerType: exe
 InstallModes:
 - interactive
 - silent
@@ -26,28 +25,33 @@ FileExtensions:
 - url
 Installers:
 - Architecture: x64
+  InstallerType: exe
   Scope: machine
-  InstallerUrl: https://get.geo.opera.com/pub/opera/desktop/80.0.4170.63/win/Opera_80.0.4170.63_Setup_x64.exe
-  InstallerSha256: 35E512103DBFF26670CE53BB4335A8851E4D4FAA05D6E2C032546395A3357E67
+  InstallerUrl: https://get.geo.opera.com/pub/opera/desktop/80.0.4170.72/win/Opera_80.0.4170.72_Setup_x64.exe
+  InstallerSha256: 318C23E5AFBB1D466F7AFFDE44488D8AF4D830593C05F6F794D51A1F4A14FC84
   InstallerSwitches:
     Custom: /allusers=1 /launchbrowser=0 /setdefaultbrowser=0 /enable-installer-stats=0 /enable-stats=0
 - Architecture: x64
+  InstallerType: exe
   Scope: user
-  InstallerUrl: https://get.geo.opera.com/pub/opera/desktop/80.0.4170.63/win/Opera_80.0.4170.63_Setup_x64.exe
-  InstallerSha256: 35E512103DBFF26670CE53BB4335A8851E4D4FAA05D6E2C032546395A3357E67
+  InstallerUrl: https://get.geo.opera.com/pub/opera/desktop/80.0.4170.72/win/Opera_80.0.4170.72_Setup_x64.exe
+  InstallerSha256: 318C23E5AFBB1D466F7AFFDE44488D8AF4D830593C05F6F794D51A1F4A14FC84
   InstallerSwitches:
     Custom: /allusers=0 /launchbrowser=0 /setdefaultbrowser=0 /enable-installer-stats=0 /enable-stats=0
 - Architecture: x86
+  InstallerType: exe
   Scope: machine
-  InstallerUrl: https://get.geo.opera.com/pub/opera/desktop/80.0.4170.63/win/Opera_80.0.4170.63_Setup.exe
-  InstallerSha256: 3F22705C5BDF48033D5588FC1212B06B3F15093E553B41C2B10A248A821ED307
+  InstallerUrl: https://get.geo.opera.com/pub/opera/desktop/80.0.4170.72/win/Opera_80.0.4170.72_Setup.exe
+  InstallerSha256: 27F711FEC567283BCB311F9CE1EF75AB3B1AFA23C5C44B99EEBC3B7FE1BD3504
   InstallerSwitches:
     Custom: /allusers=1 /launchbrowser=0 /setdefaultbrowser=0 /enable-installer-stats=0 /enable-stats=0
 - Architecture: x86
+  InstallerType: exe
   Scope: user
-  InstallerUrl: https://get.geo.opera.com/pub/opera/desktop/80.0.4170.63/win/Opera_80.0.4170.63_Setup.exe
-  InstallerSha256: 3F22705C5BDF48033D5588FC1212B06B3F15093E553B41C2B10A248A821ED307
+  InstallerUrl: https://get.geo.opera.com/pub/opera/desktop/80.0.4170.72/win/Opera_80.0.4170.72_Setup.exe
+  InstallerSha256: 27F711FEC567283BCB311F9CE1EF75AB3B1AFA23C5C44B99EEBC3B7FE1BD3504
   InstallerSwitches:
     Custom: /allusers=0 /launchbrowser=0 /setdefaultbrowser=0 /enable-installer-stats=0 /enable-stats=0
 ManifestType: installer
 ManifestVersion: 1.0.0
+
