--- a/manifests/o/Opera/Opera/80.0.4170.63/Opera.Opera.locale.en-US.yaml
+++ b/manifests/o/Opera/Opera/80.0.4170.63/Opera.Opera.locale.en-US.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.0.0 $debug=QUSU.7-1-5
+# Created using wingetcreate 0.4.2.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.0.0.schema.json
 
 PackageIdentifier: Opera.Opera
@@ -27,3 +27,4 @@ Tags:
 - cross-platform
 ManifestType: defaultLocale
 ManifestVersion: 1.0.0
+
