--- a/manifests/o/Opera/Opera/80.0.4170.63/Opera.Opera.yaml
+++ b/manifests/o/Opera/Opera/80.0.4170.63/Opera.Opera.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.0.0 $debug=QUSU.7-1-5
+# Created using wingetcreate 0.4.2.1
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.0.0.schema.json
 
 PackageIdentifier: Opera.Opera
@@ -6,3 +6,4 @@ PackageVersion: 80.0.4170.63
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.0.0
+
