--- a/manifests/l/Loom/Loom/0.106.2/Loom.Loom.locale.en-US.yaml
+++ b/manifests/l/Loom/Loom/0.106.2/Loom.Loom.locale.en-US.yaml
@@ -5,7 +5,7 @@ PackageIdentifier: Loom.Loom
 PackageVersion: 0.106.2
 PackageLocale: en-US
 Publisher: Loom, Inc.
-PublisherSupportUrl: https://support.loom.com/hc/en-us
+# PublisherSupportUrl: https://support.loom.com/hc/en-us
 PrivacyUrl: https://www.loom.com/privacy-policy
 Author: Loom, Inc.
 PackageName: Loom
