--- a/manifests/s/SKCommunications/NateOn/7.0.9.0/SKCommunications.NateOn.locale.ko-KR.yaml
+++ b/manifests/s/SKCommunications/NateOn/7.0.9.0/SKCommunications.NateOn.locale.ko-KR.yaml
@@ -5,7 +5,7 @@ PackageIdentifier: SKCommunications.NateOn
 PackageVersion: 7.0.9.0
 PackageLocale: ko-KR
 Publisher: SK Communications
-PublisherUrl: https://www.skcomms.co.kr/
+PublisherUrl: http://www.skcomms.co.kr/
 PrivacyUrl: https://www.nate.com/policy/privacy.html
 Author: SK Communications
 PackageName: 네이트온
