--- a/manifests/o/OpenStreetMap/Josm/18303/OpenStreetMap.Josm.installer.yaml
+++ b/manifests/o/OpenStreetMap/Josm/18303/OpenStreetMap.Josm.installer.yaml
@@ -10,8 +10,8 @@ FileExtensions:
 - gpx
 Dependencies:
   PackageDependencies:
-  - PackageIdentifier: Oracle.JavaRuntimeEnvironment
-    MinimumVersion: 8.0.2910.10
+  - PackageIdentifier: Oracle.JDK.17
+    MinimumVersion: 17.0.1.0
 Installers:
 - InstallerLocale: en-US
   Architecture: x64
