--- a/manifests/s/Soneliem/WAIUA/1.3.1.3/Soneliem.WAIUA.installer.yaml
+++ b/manifests/s/Soneliem/WAIUA/1.3.1.3/Soneliem.WAIUA.installer.yaml
@@ -8,6 +8,16 @@ Installers:
   InstallerType: inno
   Scope: user
   InstallerUrl: https://github.com/Soneliem/WAIUA/releases/download/v1.3.1.3/WAIUA.exe
+  InstallerSwitches:
+    Custom: /CURRENTUSER
+  InstallerSha256: 65ea01ea237ad77824001133262e9e6452aae3705a0f726047ae22afb5e91631
+  UpgradeBehavior: uninstallPrevious
+- Architecture: x64
+  InstallerType: inno
+  Scope: machine
+  InstallerUrl: https://github.com/Soneliem/WAIUA/releases/download/v1.3.1.3/WAIUA.exe
+  InstallerSwitches:
+    Custom: /ALLUSERS
   InstallerSha256: 65ea01ea237ad77824001133262e9e6452aae3705a0f726047ae22afb5e91631
   UpgradeBehavior: uninstallPrevious
 ManifestType: installer
