--- a/manifests/a/Appest/TickTick/4.2.8.1/Appest.TickTick.locale.en-US.yaml
+++ b/manifests/a/Appest/TickTick/4.2.8.1/Appest.TickTick.locale.en-US.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.1.3 $debug=QUSU.7-2-6
+# Created with YamlCreate.ps1 v2.1.3 using InputObject 🤖 $debug=QUSU.7-2-6
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.2.0.schema.json
 
 PackageIdentifier: Appest.TickTick
@@ -39,11 +39,12 @@ ReleaseNotes: |-
   - Support changing the color of sticky notes to distinguish.
   - Support adding new sticky notes on the desktop.
   - Support subtasks and checklist for sticky notes.
+
   How to experience? Right-click a task to open a sticky note to record your thoughts at any time.
 
   - Optimize shortcuts, type "?" in the application to quickly view the shortcuts list.
   - New "Command Menu", type "Ctrl+K" to open.
-ReleaseNotesUrl: https://www.ticktick.com/public/changelog/en.html
+# ReleaseNotesUrl: 
 PurchaseUrl: https://www.ticktick.com/about/upgrade
 # InstallationNotes: 
 # Documentations: 
