--- a/manifests/a/Appest/TickTick/4.2.8.1/Appest.TickTick.locale.zh-CN.yaml
+++ b/manifests/a/Appest/TickTick/4.2.8.1/Appest.TickTick.locale.zh-CN.yaml
@@ -1,4 +1,4 @@
-# Created with YamlCreate.ps1 v2.1.3 $debug=QUSU.7-2-6
+# Created with YamlCreate.ps1 v2.1.3 using InputObject 🤖 $debug=QUSU.7-2-6
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.2.0.schema.json
 
 PackageIdentifier: Appest.TickTick
@@ -36,17 +36,8 @@ Tags:
 - 笔记
 - 议程
 # Agreements: 
-ReleaseNotes: |-
-  优化了「便签」的用户体验：
-  - 支持便签修改颜色，用来区分不同类型的内容。
-  - 支持在桌面上直接添加新的便签。
-  - 支持包含子任务、检查事项的任务打开便签。
-  如何打开便签？
-  右键任务，选择「打开便签」，随时记录你的想法。
-
-  - 优化快捷键，在应用中输入「?」可快速查看快捷键列表。
-  - 新增「指令菜单」，可使用「Ctrl+K」打开。
-ReleaseNotesUrl: https://www.ticktick.com/public/changelog/zh.html
+# ReleaseNotes: 
+# ReleaseNotesUrl: 
 PurchaseUrl: https://www.ticktick.com/about/upgrade
 # InstallationNotes: 
 # Documentations: 
