--- a/manifests/j/joncampbell123/DOSBox-X/2022.08.0/joncampbell123.DOSBox-X.locale.en-US.yaml
+++ b/manifests/j/joncampbell123/DOSBox-X/2022.08.0/joncampbell123.DOSBox-X.locale.en-US.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.2.0.schema.json
 
 PackageIdentifier: joncampbell123.DOSBox-X
-PackageVersion: windows-v2022.08.0
+PackageVersion: 2022.08.0
 PackageLocale: en-US
 Publisher: joncampbell123 [DOSBox-X Team]
 PublisherUrl: https://dosbox-x.com
