--- a/manifests/j/joncampbell123/DOSBox-X/2022.08.0/joncampbell123.DOSBox-X.installer.yaml
+++ b/manifests/j/joncampbell123/DOSBox-X/2022.08.0/joncampbell123.DOSBox-X.installer.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 
 PackageIdentifier: joncampbell123.DOSBox-X
-PackageVersion: windows-v2022.08.0
+PackageVersion: 2022.08.0
 Platform:
 - Windows.Desktop
 MinimumOSVersion: 10.0.0.0
