--- a/manifests/j/joncampbell123/DOSBox-X/2022.08.0/joncampbell123.DOSBox-X.yaml
+++ b/manifests/j/joncampbell123/DOSBox-X/2022.08.0/joncampbell123.DOSBox-X.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.2.0.schema.json
 
 PackageIdentifier: joncampbell123.DOSBox-X
-PackageVersion: windows-v2022.08.0
+PackageVersion: 2022.08.0
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.2.0
