--- a/manifests/a/Appest/TickTick/4.2.8.1/Appest.TickTick.locale.en-US.yaml
+++ b/manifests/a/Appest/TickTick/4.2.8.1/Appest.TickTick.locale.en-US.yaml
@@ -39,12 +39,11 @@ ReleaseNotes: |-
   - Support changing the color of sticky notes to distinguish.
   - Support adding new sticky notes on the desktop.
   - Support subtasks and checklist for sticky notes.
-
   How to experience? Right-click a task to open a sticky note to record your thoughts at any time.
 
   - Optimize shortcuts, type "?" in the application to quickly view the shortcuts list.
   - New "Command Menu", type "Ctrl+K" to open.
-# ReleaseNotesUrl: 
+ReleaseNotesUrl: https://www.ticktick.com/public/changelog/en.html
 PurchaseUrl: https://www.ticktick.com/about/upgrade
 # InstallationNotes: 
 # Documentations: 
