--- a/manifests/m/Microsoft/WingetCreate/0.4.1.1/Microsoft.WingetCreate.installer.yaml
+++ b/manifests/m/Microsoft/WingetCreate/0.4.1.1/Microsoft.WingetCreate.installer.yaml
@@ -19,9 +19,11 @@ Installers:
   InstallerUrl: https://github.com/microsoft/winget-create/releases/download/v0.4.1.1-preview/Microsoft.WindowsPackageManagerManifestCreator_0.4.1.1_8wekyb3d8bbwe.msixbundle
   InstallerSha256: 35764F1F5EDECDE47626D7890E98091A95BD4AB142C93D5C43E155996FBA50BB
   SignatureSha256: 0920FF9AB7522586194C757E2327FF4EE95CF9417DA7BF671EE75B0D19E23F33
+  PackageFamilyName: Microsoft.WindowsPackageManagerManifestCreator_8wekyb3d8bbwe
 - Architecture: x86
   InstallerUrl: https://github.com/microsoft/winget-create/releases/download/v0.4.1.1-preview/Microsoft.WindowsPackageManagerManifestCreator_0.4.1.1_8wekyb3d8bbwe.msixbundle
   InstallerSha256: 35764F1F5EDECDE47626D7890E98091A95BD4AB142C93D5C43E155996FBA50BB
   SignatureSha256: 0920FF9AB7522586194C757E2327FF4EE95CF9417DA7BF671EE75B0D19E23F33
+  PackageFamilyName: Microsoft.WindowsPackageManagerManifestCreator_8wekyb3d8bbwe
 ManifestType: installer
 ManifestVersion: 1.2.0
