--- a/manifests/m/Microsoft/WingetCreate/0.3.0.6/Microsoft.WingetCreate.installer.yaml
+++ b/manifests/m/Microsoft/WingetCreate/0.3.0.6/Microsoft.WingetCreate.installer.yaml
@@ -17,9 +17,11 @@ Installers:
   InstallerUrl: https://github.com/microsoft/winget-create/releases/download/v0.3.0.6-preview/Microsoft.WindowsPackageManagerManifestCreator_0.3.0.6_8wekyb3d8bbwe.msixbundle
   InstallerSha256: 6CF467B9AE45E2FADCC5F3A5B6216ACE8915B104B51F20E99020DCE789FBBD68
   SignatureSha256: E07C6F2A75A6150ECCD799C138BF1C9C218FCCA735AB18ADCA5D3DB90F3C75A1
+  PackageFamilyName: Microsoft.WindowsPackageManagerManifestCreator_8wekyb3d8bbwe
 - Architecture: x86
   InstallerUrl: https://github.com/microsoft/winget-create/releases/download/v0.3.0.6-preview/Microsoft.WindowsPackageManagerManifestCreator_0.3.0.6_8wekyb3d8bbwe.msixbundle
   InstallerSha256: 6CF467B9AE45E2FADCC5F3A5B6216ACE8915B104B51F20E99020DCE789FBBD68
   SignatureSha256: E07C6F2A75A6150ECCD799C138BF1C9C218FCCA735AB18ADCA5D3DB90F3C75A1
+  PackageFamilyName: Microsoft.WindowsPackageManagerManifestCreator_8wekyb3d8bbwe
 ManifestType: installer
 ManifestVersion: 1.2.0
