--- a/manifests/w/WiseCleaner/WiseCare365/6.3.5/WiseCleaner.WiseCare365.locale.en-US.yaml
+++ b/manifests/w/WiseCleaner/WiseCare365/6.3.5/WiseCleaner.WiseCare365.locale.en-US.yaml
@@ -24,7 +24,11 @@ Tags:
 - systemcare
 - wc365
 # Agreements: 
-ReleaseNotes: 1. Improved the rule for cleaning Windows Metro Cache, increasing the scan speed. 2. Improved System Slimming for cleaning more IME files.3. Removed an optimization option "Disable hibernation to save disk space and extend SSD life.4. Minor GUI improvements.
+ReleaseNotes: |-
+  1. Improved the rule for cleaning Windows Metro Cache, increasing the scan speed.
+  2. Improved System Slimming for cleaning more IME files.
+  3. Removed an optimization option "Disable hibernation to save disk space and extend SSD life."
+  4. Minor GUI improvements.
 ReleaseNotesUrl: https://www.wisecleaner.com/blog_content_1104.html
 # PurchaseUrl: 
 # InstallationNotes: 
