--- a/manifests/p/Principle/Lusun/1.6.2/Principle.Lusun.installer.yaml
+++ b/manifests/p/Principle/Lusun/1.6.2/Principle.Lusun.installer.yaml
@@ -4,7 +4,7 @@
 PackageIdentifier: Principle.Lusun
 PackageVersion: 1.6.2
 MinimumOSVersion: 10.0.0.0
-InstallerType: nullsoft
+InstallerType: nullsoft # electron-builder
 InstallerSwitches:
   Upgrade: --updated
 UpgradeBehavior: install
