--- a/manifests/p/Principle/Lusun/1.6.2/Principle.Lusun.locale.zh-CN.yaml
+++ b/manifests/p/Principle/Lusun/1.6.2/Principle.Lusun.locale.zh-CN.yaml
@@ -28,8 +28,9 @@ Tags:
 - 视频
 - 讲解
 # Agreements: 
-# ReleaseNotes: 
-# ReleaseNotesUrl: 
+ReleaseNotes: |-
+  - 增加了新功能
+ReleaseNotesUrl: https://principle.feishu.cn/mindnotes/bmncnnwj8J8h6TEjM4hXWThODyb
 PurchaseUrl: https://lusun.com/pricing
 # InstallationNotes: 
 Documentations:
