--- a/manifests/l/lightspark/lightspark/0.8.6.1/lightspark.lightspark.installer.yaml
+++ b/manifests/l/lightspark/lightspark/0.8.6.1/lightspark.lightspark.installer.yaml
@@ -14,12 +14,12 @@ FileExtensions:
 - swf
 ReleaseDate: 2022-08-26
 Installers:
-- InstallerLocale: en-SU
-  Architecture: x64
+- InstallerLocale: en-US
+  Architecture: x86
   InstallerUrl: https://github.com/lightspark/lightspark/releases/download/0.8.6.1/Lightspark-v0.8.6.1-Installer-win32.exe
   InstallerSha256: E53DEA3F0A554D8699966052B6102305AD6214BE95CCD92E5A9722629D0C325F
 - InstallerLocale: en-US
-  Architecture: x86
+  Architecture: x64
   InstallerUrl: https://github.com/lightspark/lightspark/releases/download/0.8.6.1/Lightspark-v0.8.6.1-Installer-win64.exe
   InstallerSha256: 718CA74B1512E1471DAF0DE01329CDE51D448F2D7A5AB7328FEA3FE5D8B52BBC
 ManifestType: installer
