--- a/manifests/m/MasterPackager/MasterPackager/22.3.8241.0/MasterPackager.MasterPackager.locale.en-US.yaml
+++ b/manifests/m/MasterPackager/MasterPackager/22.3.8241.0/MasterPackager.MasterPackager.locale.en-US.yaml
@@ -29,7 +29,7 @@ Tags:
 - response-transform
 # Agreements: 
 # ReleaseNotes: 
-# ReleaseNotesUrl: 
+ReleaseNotesUrl: https://www.masterpackager.com/support/release-notes
 # PurchaseUrl: 
 # InstallationNotes: 
 # Documentations: 
