--- a/manifests/l/lightspark/lightspark/0.8.6-git/lightspark.lightspark.yaml
+++ b/manifests/l/lightspark/lightspark/0.8.6-git/lightspark.lightspark.yaml
@@ -2,7 +2,7 @@
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.version.1.2.0.schema.json
 
 PackageIdentifier: lightspark.lightspark
-PackageVersion: 0.8.6.1
+PackageVersion: 0.8.6-git
 DefaultLocale: en-US
 ManifestType: version
 ManifestVersion: 1.2.0
