--- a/manifests/s/Splunk/ACS/2.6.0/Splunk.ACS.installer.yaml
+++ b/manifests/s/Splunk/ACS/2.6.0/Splunk.ACS.installer.yaml
@@ -19,5 +19,8 @@ Installers:
 - Architecture: x64
   InstallerUrl: https://github.com/splunk/acs-cli/releases/download/v2.6.0/acs_v2.6.0_windows_amd64_installer.exe
   InstallerSha256: d065bfb72db6e1b72743308a026a8cf5674d08e4e8e236ba299a62b4c3cca6c5
+  AppsAndFeaturesEntries:
+  - DisplayName: ACS
+    Publisher: Splunk
 ManifestType: installer
 ManifestVersion: 1.1.0
