Update: Oracle.JDK.17 version 17.0.4.1

--- a/manifests/o/Oracle/JDK/17/17.0.4.1/Oracle.JDK.17.installer.yaml
+++ b/manifests/o/Oracle/JDK/17/17.0.4.1/Oracle.JDK.17.installer.yaml
@@ -1,5 +1,5 @@
-# Automatically updated by the winget bot at 2022/Aug/19
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.1.0.schema.json
+# Created with YamlCreate.ps1 v2.1.4 $debug=QUSU.7-2-6
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 
 PackageIdentifier: Oracle.JDK.17
 PackageVersion: 17.0.4.1
@@ -13,10 +13,12 @@ InstallModes:
 InstallerSwitches:
   InstallLocation: INSTALLDIR=<INSTALLPATH>
 UpgradeBehavior: uninstallPrevious
+AppsAndFeaturesEntries:
+  - DisplayName: Java(TM) SE Development Kit 17.0.4.1 (64-bit)
 Installers:
 - Architecture: x64
-  InstallerUrl: https://download.oracle.com/java/17/latest/jdk-17_windows-x64_bin.msi
+  InstallerUrl: https://download.oracle.com/java/17/archive/jdk-17.0.4.1_windows-x64_bin.msi
   InstallerSha256: 51BB24C4173FAF9AF14466AE4ECA4D7703E2208E4C6F73C253B3A61999D93E45
   ProductCode: '{A2B43423-25AE-511B-9487-A304DCCA672A}'
 ManifestType: installer
-ManifestVersion: 1.1.0
+ManifestVersion: 1.2.0
