--- a/manifests/m/MasterPackager/MasterPackager/22.3.8241.0/MasterPackager.MasterPackager.installer.yaml
+++ b/manifests/m/MasterPackager/MasterPackager/22.3.8241.0/MasterPackager.MasterPackager.installer.yaml
@@ -1,10 +1,10 @@
-# Created with YamlCreate.ps1 v2.0.7 using InputObject 🤖 $debug=QUSU-7-2-5
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.1.0.schema.json
+# Created with YamlCreate.ps1 v2.1.3 using InputObject 🤖 $debug=QUSU.7-2-6
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 
 PackageIdentifier: MasterPackager.MasterPackager
 PackageVersion: 22.3.8241.0
 MinimumOSVersion: 10.0.0.0
-InstallerType: msi
+InstallerType: wix
 Scope: machine
 Installers:
 - Architecture: x86
@@ -12,4 +12,4 @@ Installers:
   InstallerSha256: 9BA573FE1CE44BF1F901E6E5B77F91F1C64D0104E546237125C70F352926636B
   ProductCode: '{03854377-73AD-4A3B-99B0-C1038BF86DE0}'
 ManifestType: installer
-ManifestVersion: 1.1.0
+ManifestVersion: 1.2.0
