--- a/manifests/s/Splunk/ACS/2.6.0/Splunk.ACS.locale.en-US.yaml
+++ b/manifests/s/Splunk/ACS/2.6.0/Splunk.ACS.locale.en-US.yaml
@@ -3,11 +3,11 @@
 PackageIdentifier: Splunk.ACS
 PackageVersion: 2.6.0
 PackageLocale: en-US
-Publisher: Splunk, Inc.
+Publisher: Splunk
 PublisherUrl: https://www.splunk.com
 # PrivacyUrl:
 Author: Splunk
-PackageName: ACS CLI
+PackageName: ACS
 PackageUrl: https://docs.splunk.com/Documentation/SplunkCloud/latest/Config/ACSCLI
 License: Splunk Software License Agreement
 LicenseUrl: https://www.splunk.com/en_us/legal/splunk-general-terms.html
