--- a/manifests/m/MicrosoftCorporation/MicrosoftReportBuilder/15.0.19914.0/MicrosoftCorporation.MicrosoftReportBuilder.locale.en-US.yaml
+++ b/manifests/m/MicrosoftCorporation/MicrosoftReportBuilder/15.0.19914.0/MicrosoftCorporation.MicrosoftReportBuilder.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: 15.0.19914.0
 PackageLocale: en-US
 Publisher: Microsoft Corporation
 PackageName: Microsoft Report Builder
-License: Licensed
+License: Proprietary
 ShortDescription: Report Builder provides a productive report-authoring environment for IT professionals and power users. The download provides a stand-alone installer for Report Builder.
 ManifestType: defaultLocale
 ManifestVersion: 1.2.0
