--- a/manifests/k/Kiwix/KiwixJS/1.9.0.0/Kiwix.KiwixJS.installer.yaml
+++ b/manifests/k/Kiwix/KiwixJS/1.9.0.0/Kiwix.KiwixJS.installer.yaml
@@ -7,7 +7,7 @@ Installers:
   - Windows.Universal
   MinimumOSVersion: 10.0.10240.0
   Architecture: neutral
-  InstallerType: msix
+  InstallerType: appx
   InstallerUrl: https://github.com/kiwix/kiwix-js-windows/releases/download/v1.9.0/KiwixWebApp_1.9.0.0_AnyCPU.appxbundle
   InstallerSha256: 870F63A993AFC7C630EB51B729C13E48BCBEBF3ECBEDF1BB9C91EEAE3A8AD8C6
   SignatureSha256: 50A96F9AABAAE9C318659AEC388A64D276BD837B8D3B741C8E5C76CE8C610A16
