--- a/manifests/o/OpenWhisperSystems/Signal/5.10.0/OpenWhisperSystems.Signal.locale.en-US.yaml
+++ b/manifests/o/OpenWhisperSystems/Signal/5.10.0/OpenWhisperSystems.Signal.locale.en-US.yaml
@@ -6,7 +6,7 @@ PackageVersion: 5.10.0
 PackageLocale: en-US
 Publisher: Open Whisper Systems
 PublisherUrl: https://www.signal.org
-PublisherSupportUrl: https://support.signal.org/hc/en-us
+# PublisherSupportUrl: https://support.signal.org/hc/en-us
 PrivacyUrl: https://www.signal.org/legal/#privacy-policy
 Author: Open Whisper Systems
 PackageName: Signal
