--- a/manifests/a/AAAInternetPublishing/wtfast/5.4.2.0/AAAInternetPublishing.wtfast.installer.yaml
+++ b/manifests/a/AAAInternetPublishing/wtfast/5.4.2.0/AAAInternetPublishing.wtfast.installer.yaml
@@ -6,6 +6,8 @@ PackageVersion: 5.4.2.0
 Installers:
 - Architecture: x64
   InstallerType: inno
+  Installerswitches:
+  custom: /suppressmsgboxes
   InstallerUrl: https://download.wtfast.com/product/wtfast/wtfastsetup.5.4.2.exe
   InstallerSha256: C2A31FEC55371186CB8F22C26E7BACE9D0FD3B124D6D029CCF60B1B017634019
 ManifestType: installer
