--- a/manifests/a/AAAInternetPublishing/wtfast/5.4.2.0/AAAInternetPublishing.wtfast.installer.yaml
+++ b/manifests/a/AAAInternetPublishing/wtfast/5.4.2.0/AAAInternetPublishing.wtfast.installer.yaml
@@ -7,7 +7,7 @@ Installers:
 - Architecture: x64
   InstallerType: inno
   InstallerSwitches:
-    custom: /suppressmsgboxes
+    Custom: /suppressmsgboxes
   InstallerUrl: https://download.wtfast.com/product/wtfast/wtfastsetup.5.4.2.exe
   InstallerSha256: C2A31FEC55371186CB8F22C26E7BACE9D0FD3B124D6D029CCF60B1B017634019
 ManifestType: installer
