Updated Google Chrome to version 105.0.5195.54.

--- a/manifests/g/Google/Chrome/105.0.5195.54/Google.Chrome.installer.yaml
+++ b/manifests/g/Google/Chrome/105.0.5195.54/Google.Chrome.installer.yaml
@@ -1,10 +1,9 @@
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.1.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 PackageIdentifier: Google.Chrome
-PackageVersion: 104.0.5112.111
+PackageVersion: 105.0.5195.54
 Platform:
 - Windows.Desktop
 MinimumOSVersion: 10.0.0.0
-InstallerType: wix
 Scope: machine
 InstallModes:
 - interactive
@@ -22,13 +21,14 @@ FileExtensions:
 - url
 Installers:
 - Architecture: x64
+  InstallerType: wix
   InstallerUrl: https://dl.google.com/dl/chrome/install/googlechromestandaloneenterprise64.msi
-  InstallerSha256: FD9EBD69A1BF8DFA76457E3CE74F5DA7E6BD645B6D4595C2F8D47606B204BEB4
-  ProductCode: "{E23C6EE2-5782-397D-928D-EC22FD93762E}"
+  InstallerSha256: fd9ebd69a1bf8dfa76457e3ce74f5da7e6bd645b6d4595c2f8d47606b204beb4
+  ProductCode: '{E23C6EE2-5782-397D-928D-EC22FD93762E}'
 - Architecture: x86
+  InstallerType: wix
   InstallerUrl: https://dl.google.com/dl/chrome/install/googlechromestandaloneenterprise.msi
-  InstallerSha256: A0EC2D8F06AF8BA50985A0A76C0344B0455E236404B44083B36C40FB40F97B30
-  ProductCode: "{7B2DC110-5512-34BE-9907-00935D4D0C77}"
+  InstallerSha256: a0ec2d8f06af8ba50985a0a76c0344b0455e236404b44083b36c40fb40f97b30
+  ProductCode: '{7B2DC110-5512-34BE-9907-00935D4D0C77}'
 ManifestType: installer
-ManifestVersion: 1.1.0
-
+ManifestVersion: 1.2.0
