--- a/manifests/g/Google/Chrome/105.0.5195.54/Google.Chrome.locale.en-US.yaml
+++ b/manifests/g/Google/Chrome/105.0.5195.54/Google.Chrome.locale.en-US.yaml
@@ -1,6 +1,6 @@
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultlocale.1.1.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.2.0.schema.json
 PackageIdentifier: Google.Chrome
-PackageVersion: 104.0.5112.111
+PackageVersion: 105.0.5195.54
 PackageLocale: en-US
 Publisher: Google LLC
 PublisherUrl: https://www.google.com
@@ -13,8 +13,12 @@ License: Proprietary freeware, based on open source components
 LicenseUrl: https://www.google.com/chrome/terms/
 Copyright: © 2021 Google, Inc.
 CopyrightUrl: https://www.google.com/chrome/terms/
-ShortDescription: A fast, secure, and free web browser built for the modern web. Chrome syncs bookmarks across all your devices, fills out forms automatically, and so much more.
-Description: A fast, secure, and free web browser built for the modern web. Chrome syncs bookmarks across all your devices, fills out forms automatically, and so much more.
+ShortDescription: A fast, secure, and free web browser built for the modern web. Chrome
+  syncs bookmarks across all your devices, fills out forms automatically, and so much
+  more.
+Description: A fast, secure, and free web browser built for the modern web. Chrome
+  syncs bookmarks across all your devices, fills out forms automatically, and so much
+  more.
 Moniker: chrome
 Tags:
 - browser
@@ -26,5 +30,4 @@ Tags:
 - web
 - web-browser
 ManifestType: defaultLocale
-ManifestVersion: 1.1.0
-
+ManifestVersion: 1.2.0
