--- a/manifests/g/Google/Chrome/105.0.5195.54/Google.Chrome.locale.nb-NO.yaml
+++ b/manifests/g/Google/Chrome/105.0.5195.54/Google.Chrome.locale.nb-NO.yaml
@@ -1,6 +1,6 @@
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.1.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.locale.1.2.0.schema.json
 PackageIdentifier: Google.Chrome
-PackageVersion: 104.0.5112.111
+PackageVersion: 105.0.5195.54
 PackageLocale: nb-NO
 Publisher: Google LLC
 PublisherUrl: https://www.google.com
@@ -13,10 +13,13 @@ License: Proprietary freeware, based on open source components
 LicenseUrl: https://www.google.com/intl/no/chrome/terms/
 Copyright: © 2021 Google, Inc.
 CopyrightUrl: https://www.google.com/intl/no/chrome/terms/
-ShortDescription: En rask, sikker og gratis nettleser bygget for det moderne nettet. Chrome synkroniserer bokmerker på alle enhetene dine, fyller ut skjemaer automatisk og så mye mer.
-Description: En rask, sikker og gratis nettleser bygget for det moderne nettet. Chrome synkroniserer bokmerker på alle enhetene dine, fyller ut skjemaer automatisk og så mye mer.
+ShortDescription: En rask, sikker og gratis nettleser bygget for det moderne nettet.
+  Chrome synkroniserer bokmerker på alle enhetene dine, fyller ut skjemaer automatisk
+  og så mye mer.
+Description: En rask, sikker og gratis nettleser bygget for det moderne nettet. Chrome
+  synkroniserer bokmerker på alle enhetene dine, fyller ut skjemaer automatisk og
+  så mye mer.
 Tags:
 - nettleser
 ManifestType: locale
-ManifestVersion: 1.1.0
-
+ManifestVersion: 1.2.0
