--- a/manifests/g/Gluon/SceneBuilder/18/18.0.0/Gluon.SceneBuilder.18.locale.en-US.yaml
+++ b/manifests/g/Gluon/SceneBuilder/18/18.0.0/Gluon.SceneBuilder.18.locale.en-US.yaml
@@ -5,7 +5,7 @@ PackageIdentifier: Gluon.SceneBuilder.18
 PackageVersion: 18.0.0
 PackageLocale: en-US
 Publisher: Gluon
-PackageName: SceneBuilder
+PackageName: SceneBuilder 18
 License: BSD License
 ShortDescription: Scene Builder is free and open source, but is backed by Gluon. Drag & Drop user interface design allows for rapid iteration.
 ManifestType: defaultLocale
