add documentation node

--- a/manifests/r/RStudio/quarto/1.1.165/RStudio.quarto.locale.en-US.yaml
+++ b/manifests/r/RStudio/quarto/1.1.165/RStudio.quarto.locale.en-US.yaml
@@ -30,6 +30,11 @@ Tags:
 - r
 - reproducibility
 - rmarkdown
+Documentation:
+  - DocumentLabel: Tutorial
+    DocumentUrl: https://quarto.org/docs/get-started/
+  - DocumentLabel: Documentation
+    DocumentUrl: https://quarto.org/docs/guide/
 ManifestType: defaultLocale
 ManifestVersion: 1.2.0
 
