New version: StylusLabs.Write version 3.0.1432

--- a/manifests/s/StylusLabs/Write/3.0.1432/StylusLabs.Write.locale.en-US.yaml
+++ b/manifests/s/StylusLabs/Write/3.0.1432/StylusLabs.Write.locale.en-US.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.0.7 $debug=AUSU.7-2-1
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.1.0.schema.json
+# Created with YamlCreate.ps1 v2.1.4 $debug=AUSU.5-1-19041-1682
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.2.0.schema.json
 
 PackageIdentifier: StylusLabs.Write
-PackageVersion: 3.0.1423
+PackageVersion: 3.0.1432
 PackageLocale: en-US
 Publisher: Stylus Labs
 # PublisherUrl: 
@@ -11,9 +11,9 @@ Publisher: Stylus Labs
 # Author: 
 PackageName: Write
 PackageUrl: http://www.styluslabs.com/
-License: Copyright ® Stylus Labs
+License: Proprietary
 LicenseUrl: http://www.styluslabs.com/write/eula.docx
-# Copyright: 
+Copyright: Copyright ® Stylus Labs
 # CopyrightUrl: 
 ShortDescription: A word processor for handwriting.
 # Description: 
@@ -22,5 +22,8 @@ Moniker: stylus_write
 # Agreements: 
 # ReleaseNotes: 
 # ReleaseNotesUrl: 
+# PurchaseUrl: 
+# InstallationNotes: 
+# Documentations: 
 ManifestType: defaultLocale
-ManifestVersion: 1.1.0
+ManifestVersion: 1.2.0
