--- a/manifests/s/Sigil-Ebook/Sigil/1.6.0/Sigil-Ebook.Sigil.locale.en-US.yaml
+++ b/manifests/s/Sigil-Ebook/Sigil/1.6.0/Sigil-Ebook.Sigil.locale.en-US.yaml
@@ -5,7 +5,7 @@ PackageVersion: 1.6.0
 PackageLocale: en-US
 Publisher: Sigil-Ebook
 PublisherUrl: https://sigil-ebook.com/
-PublisherSupportUrl: https://sigil-ebook.com/support/
+# PublisherSupportUrl: https://sigil-ebook.com/support/
 PackageName: Sigil
 PackageUrl: https://sigil-ebook.com/
 License: GPL3
