Fixed incorrect product codes for Firefox version 104.0.1.

--- a/manifests/m/Mozilla/Firefox/104.0.1/Mozilla.Firefox.installer.yaml
+++ b/manifests/m/Mozilla/Firefox/104.0.1/Mozilla.Firefox.installer.yaml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.1.0.schema.json
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 PackageIdentifier: Mozilla.Firefox
 PackageVersion: 104.0.1
 Platform:
@@ -16,7 +16,7 @@ FileExtensions:
 - htm
 - html
 - url
-ReleaseDate: 2022-08-30
+ReleaseDate: '2022-08-30'
 Installers:
 - InstallerLocale: en-US
   Architecture: x64
@@ -27,7 +27,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 en-US)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 en-US)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 en-US)
 - InstallerLocale: en-US
   Architecture: x64
   InstallerType: exe
@@ -40,7 +40,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 en-US)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 en-US)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 en-US)
 - InstallerLocale: en-US
   Architecture: x86
   InstallerType: wix
@@ -50,7 +50,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 en-US)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 en-US)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 en-US)
 - InstallerLocale: en-US
   Architecture: x86
   InstallerType: exe
@@ -63,7 +63,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 en-US)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 en-US)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 en-US)
 - InstallerLocale: en-US
   Architecture: arm64
   InstallerType: exe
@@ -82,7 +82,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 zh-CN)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 zh-CN)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 zh-CN)
 - InstallerLocale: zh-CN
   Architecture: x64
   InstallerType: exe
@@ -95,7 +95,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 zh-CN)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 zh-CN)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 zh-CN)
 - InstallerLocale: zh-CN
   Architecture: x86
   InstallerType: wix
@@ -105,7 +105,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 zh-CN)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 zh-CN)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 zh-CN)
 - InstallerLocale: zh-CN
   Architecture: x86
   InstallerType: exe
@@ -118,7 +118,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 zh-CN)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 zh-CN)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 zh-CN)
 - InstallerLocale: zh-CN
   Architecture: arm64
   InstallerType: exe
@@ -134,11 +134,11 @@ Installers:
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win64/en-GB/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: 9064E347815B8B942C703E705ECDE78219E6483E7FAD4110255652881223296C
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 en-GB)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 en-GB)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 en-GB)
 - InstallerLocale: en-GB
   Architecture: x64
   InstallerType: exe
@@ -151,7 +151,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 en-GB)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 en-GB)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 en-GB)
 - InstallerLocale: en-GB
   Architecture: x86
   InstallerType: wix
@@ -161,7 +161,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 en-GB)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 en-GB)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 en-GB)
 - InstallerLocale: en-GB
   Architecture: x86
   InstallerType: exe
@@ -174,7 +174,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 en-GB)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 en-GB)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 en-GB)
 - InstallerLocale: en-GB
   Architecture: arm64
   InstallerType: exe
@@ -193,7 +193,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 ru)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 ru)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 ru)
 - InstallerLocale: ru-RU
   Architecture: x64
   InstallerType: exe
@@ -206,7 +206,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 ru)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 ru)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 ru)
 - InstallerLocale: ru-RU
   Architecture: x86
   InstallerType: wix
@@ -216,7 +216,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 ru)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 ru)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 ru)
 - InstallerLocale: ru-RU
   Architecture: x86
   InstallerType: exe
@@ -229,7 +229,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 ru)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 ru)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 ru)
 - InstallerLocale: ru-RU
   Architecture: arm64
   InstallerType: exe
@@ -245,11 +245,11 @@ Installers:
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win64/de/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: D0390CC8F04AEACAA2752D00EBC48188EBE935834089DB6EB458C8C70559C6C9
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 de)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 de)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 de)
 - InstallerLocale: de-DE
   Architecture: x64
   InstallerType: exe
@@ -262,18 +262,18 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 de)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 de)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 de)
 - InstallerLocale: de-DE
   Architecture: x86
   InstallerType: wix
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win32/de/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: C5B9698290634B0EFDFCF54EB0081A6FA809CEF9BCAD426A1506A0EFAEB9BB65
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 de)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 de)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 de)
 - InstallerLocale: de-DE
   Architecture: x86
   InstallerType: exe
@@ -286,7 +286,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 de)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 de)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 de)
 - InstallerLocale: de-DE
   Architecture: arm64
   InstallerType: exe
@@ -302,11 +302,11 @@ Installers:
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win64/el/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: 995BFD5A9A226D49D5E9EA9AA4D94FB1F14EB9A982E54DEFA59F1EB92C28D6EC
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 el)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 el)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 el)
 - InstallerLocale: el-GR
   Architecture: x64
   InstallerType: exe
@@ -319,18 +319,18 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 el)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 el)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 el)
 - InstallerLocale: el-GR
   Architecture: x86
   InstallerType: wix
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win32/el/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: 72917932E75C216D3084D18005FB22591E4EAE6D8432DC5C3C0B04358983D092
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 el)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 el)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 el)
 - InstallerLocale: el-GR
   Architecture: x86
   InstallerType: exe
@@ -343,7 +343,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 el)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 el)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 el)
 - InstallerLocale: el-GR
   Architecture: arm64
   InstallerType: exe
@@ -359,11 +359,11 @@ Installers:
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win64/ja/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: 1C6227F4ED01FD913FCFCB778D800366A9E35DFA74A8685B652BD5D3BC84F11B
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 ja)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 ja)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 ja)
 - InstallerLocale: ja-JP
   Architecture: x64
   InstallerType: exe
@@ -376,18 +376,18 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 ja)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 ja)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 ja)
 - InstallerLocale: ja-JP
   Architecture: x86
   InstallerType: wix
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win32/ja/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: 8F7CB64233F47DD5C58E091A66C9A0A55ECF738E19D5E65F4012A8ACE975CA9E
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 ja)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 ja)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 ja)
 - InstallerLocale: ja-JP
   Architecture: x86
   InstallerType: exe
@@ -400,7 +400,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 ja)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 ja)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 ja)
 - InstallerLocale: ja-JP
   Architecture: arm64
   InstallerType: exe
@@ -416,11 +416,11 @@ Installers:
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win64/es-ES/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: 21C27ABD8902E2301BD069358F2AA07EB9C0AD97304C8E4A5B91204F50CE4D02
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 es-ES)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 es-ES)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 es-ES)
 - InstallerLocale: es-ES
   Architecture: x64
   InstallerType: exe
@@ -433,18 +433,18 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 es-ES)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 es-ES)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 es-ES)
 - InstallerLocale: es-ES
   Architecture: x86
   InstallerType: wix
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win32/es-ES/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: 51BB3797F8B141CC12940CA59944D28990CF143A74670BF394D2DB002CDFFED1
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 es-ES)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 es-ES)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 es-ES)
 - InstallerLocale: es-ES
   Architecture: x86
   InstallerType: exe
@@ -457,7 +457,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 es-ES)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 es-ES)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 es-ES)
 - InstallerLocale: es-ES
   Architecture: arm64
   InstallerType: exe
@@ -473,11 +473,11 @@ Installers:
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win64/es-MX/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: 23F8FF7860746344F0AEF744BCC7E1EB9DF1D023169CF7EA2DBBC89AF22BAD8F
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 es-MX)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 es-MX)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 es-MX)
 - InstallerLocale: es-MX
   Architecture: x64
   InstallerType: exe
@@ -490,18 +490,18 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 es-MX)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 es-MX)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 es-MX)
 - InstallerLocale: es-MX
   Architecture: x86
   InstallerType: wix
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win32/es-MX/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: 0F7F760107CE8D6B320F4D6671DAD994DDD7880923E06B266935F113271A3A26
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 es-MX)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 es-MX)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 es-MX)
 - InstallerLocale: es-MX
   Architecture: x86
   InstallerType: exe
@@ -514,7 +514,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 es-MX)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 es-MX)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 es-MX)
 - InstallerLocale: es-MX
   Architecture: arm64
   InstallerType: exe
@@ -530,11 +530,11 @@ Installers:
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win64/nb-NO/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: 064549695F0E7B89FEA87E0B6B085501F4750C64A5A3399A096EDDF64617E464
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 nb-NO)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 nb-NO)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 nb-NO)
 - InstallerLocale: nb-NO
   Architecture: x64
   InstallerType: exe
@@ -547,18 +547,18 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 nb-NO)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 nb-NO)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 nb-NO)
 - InstallerLocale: nb-NO
   Architecture: x86
   InstallerType: wix
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win32/nb-NO/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: 0D4492C22CE24E8D94AE4A37E1B9B0198C8F6B6CA8AFC49D6883429AD0A832C9
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 nb-NO)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 nb-NO)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 nb-NO)
 - InstallerLocale: nb-NO
   Architecture: x86
   InstallerType: exe
@@ -571,7 +571,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 nb-NO)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 nb-NO)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 nb-NO)
 - InstallerLocale: nb-NO
   Architecture: arm64
   InstallerType: exe
@@ -599,11 +599,11 @@ Installers:
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win64/fr/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: 3BF5387981088D16F407A1EDE28FAD23BDFE95BFE70D370A06A49B7E6BB9013D
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 fr)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 fr)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 fr)
 - InstallerLocale: fr-FR
   Architecture: x64
   InstallerType: exe
@@ -616,18 +616,18 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x64 fr)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x64 fr)
+    ProductCode: Mozilla Firefox 104.0.1 (x64 fr)
 - InstallerLocale: fr-FR
   Architecture: x86
   InstallerType: wix
   Scope: machine
   InstallerUrl: https://download-installer.cdn.mozilla.net/pub/firefox/releases/104.0.1/win32/fr/Firefox%20Setup%20104.0.1.msi
   InstallerSha256: 52F6DE8DDCDE25902B760ABCB36129E98E5F5F3BFE7651BCF11B4F8C81CE87F1
-  ProductCode: "{1294A4C5-9977-480F-9497-C0EA1E630130}"
+  ProductCode: '{1294A4C5-9977-480F-9497-C0EA1E630130}'
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 fr)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 fr)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 fr)
 - InstallerLocale: fr-FR
   Architecture: x86
   InstallerType: exe
@@ -640,7 +640,7 @@ Installers:
   AppsAndFeaturesEntries:
   - DisplayName: Mozilla Firefox (x86 fr)
     Publisher: Mozilla
-    ProductCode: Mozilla Firefox 104.0 (x86 fr)
+    ProductCode: Mozilla Firefox 104.0.1 (x86 fr)
 - InstallerLocale: fr-FR
   Architecture: arm64
   InstallerType: exe
@@ -651,5 +651,4 @@ Installers:
     Silent: /S
     SilentWithProgress: /S
 ManifestType: installer
-ManifestVersion: 1.1.0
-
+ManifestVersion: 1.2.0
