--- a/manifests/w/WeMod/WeMod/8.3.3/WeMod.WeMod.locale.en-US.yaml
+++ b/manifests/w/WeMod/WeMod/8.3.3/WeMod.WeMod.locale.en-US.yaml
@@ -11,7 +11,7 @@ Publisher: WeMod
 # Author: 
 PackageName: WeMod
 PackageUrl: https://www.wemod.com/
-License: (c) 2021 WeMod. All rights reserved.
+License: Proprietary
 LicenseUrl: https://www.wemod.com/terms
 # Copyright: 
 # CopyrightUrl: 
