--- a/manifests/l/Learnpulse/Screenpresso/2.1.5.0/Learnpulse.Screenpresso.installer.yaml
+++ b/manifests/l/Learnpulse/Screenpresso/2.1.5.0/Learnpulse.Screenpresso.installer.yaml
@@ -1,10 +1,8 @@
-# Created with YamlCreate.ps1 v2.1.2 $debug=QUSU.5-1-19041-1682
-# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.1.0.schema.json
+# Created with YamlCreate.ps1 v2.1.4 $debug=NVS0.5-1-19041-1682
+# yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 
 PackageIdentifier: Learnpulse.Screenpresso
 PackageVersion: 2.1.5.0
-Platform:
-- Windows.Desktop
 MinimumOSVersion: 10.0.0.0
 InstallerType: msi
 Scope: machine
@@ -15,10 +13,11 @@ InstallModes:
 InstallerSwitches:
   Custom: /NORESTART
 UpgradeBehavior: install
+ReleaseDate: 2022-08-20
 Installers:
 - Architecture: x64
   InstallerUrl: https://www.screenpresso.com/binaries/releases/v2-1-05-000/dotnet47/ScreenpressoSetup.msi
   InstallerSha256: 1A03983E37CBA399C5B369108B64D04FA09C61D4A019C0FDE410710A66A15B78
   ProductCode: '{1f8f9489-fb0d-4dc3-95c7-43a7585cb623}'
 ManifestType: installer
-ManifestVersion: 1.1.0
+ManifestVersion: 1.2.0
