--- a/manifests/r/RStudio/quarto/1.1.165/RStudio.quarto.locale.en-US.yaml
+++ b/manifests/r/RStudio/quarto/1.1.165/RStudio.quarto.locale.en-US.yaml
@@ -30,7 +30,7 @@ Tags:
 - r
 - reproducibility
 - rmarkdown
-Documentation:
+Documentations:
   - DocumentLabel: Tutorial
     DocumentUrl: https://quarto.org/docs/get-started/
   - DocumentLabel: Documentation
