`Documentations` and `Agreements` cf. #76574

--- a/manifests/e/EpicGames/EpicGamesLauncher/1.3.23.0/EpicGames.EpicGamesLauncher.locale.en-US.yaml
+++ b/manifests/e/EpicGames/EpicGamesLauncher/1.3.23.0/EpicGames.EpicGamesLauncher.locale.en-US.yaml
@@ -28,7 +28,7 @@ Tags:
 - gaming
 - launcher
 - unreal
-Agreement: 
+Agreements: 
   - AgreementLabel: EULA
     AgreementUrl: https://epicgames.com/eula
   - AgreementLabel: Terms of service
@@ -37,7 +37,7 @@ Agreement:
 # ReleaseNotesUrl: 
 # PurchaseUrl: 
 # InstallationNotes: 
-Documentation: 
+Documentations: 
   - DocumentLabel: FAQ
     DocumentUrl: https://www.epicgames.com/epic-games-store-faq
 ManifestType: defaultLocale
