comment out `Agreements:` cf #76585

--- a/manifests/w/Wargaming/WorldOfWarshipsModStation/2.1.0.2/Wargaming.WorldOfWarshipsModStation.locale.en-US.yaml
+++ b/manifests/w/Wargaming/WorldOfWarshipsModStation/2.1.0.2/Wargaming.WorldOfWarshipsModStation.locale.en-US.yaml
@@ -25,9 +25,9 @@ Tags:
 - modstation
 - worldofwarships
 - wow
-Agreements:
-  - AgreementLabel: EULA
-    AgreementUrl: https://legal.eu.wargaming.net/eula/
+# Agreements:
+#   - AgreementLabel: EULA
+#     AgreementUrl: https://legal.eu.wargaming.net/eula/
 # ReleaseNotes: 
 # ReleaseNotesUrl: 
 # PurchaseUrl: 
