--- a/manifests/e/EpicGames/EpicGamesLauncher/1.3.23.0/EpicGames.EpicGamesLauncher.locale.en-US.yaml
+++ b/manifests/e/EpicGames/EpicGamesLauncher/1.3.23.0/EpicGames.EpicGamesLauncher.locale.en-US.yaml
@@ -28,16 +28,11 @@ Tags:
 - gaming
 - launcher
 - unreal
-Agreement: 
-  - AgreementLabel: EULA
-    AgreementUrl: https://epicgames.com/eula
-  - AgreementLabel: Terms of service
-    AgreementUrl: https://www.epicgames.com/tos
 # ReleaseNotes: 
 # ReleaseNotesUrl: 
 # PurchaseUrl: 
 # InstallationNotes: 
-Documentation: 
+Documentations: 
   - DocumentLabel: FAQ
     DocumentUrl: https://www.epicgames.com/epic-games-store-faq
 ManifestType: defaultLocale
