--- a/manifests/n/Novaquark/DualUniverse/Beta 1/Novaquark.DualUniverse.locale.en-US.yaml
+++ b/manifests/n/Novaquark/DualUniverse/Beta 1/Novaquark.DualUniverse.locale.en-US.yaml
@@ -10,15 +10,13 @@ PublisherSupportUrl: https://support.dualthegame.com
 PrivacyUrl: https://www.dualuniverse.game/legal/privacy-policy
 PackageName: Dual Universe
 License: Proprietary
+LicenseUrl: https://www.dualuniverse.game/legal/eula
 Copyright: Copyright (c) 2022 Novaquark - All rights reserved.
 ShortDescription: Dual Universe is a forward-thinking online game featuring a persistent and shared universe made with next-generation voxels.
 Description: |-
   Dual Universe is a forward-thinking online game featuring a persistent and shared universe made with next-generation voxels.
   As a true precursor to the metaverse, the game world is fully editable, and the game experience is entirely driven by its players.
   Dual Universe is currently in public beta and reaching the final stretch toward launch.
-Agreement:
-  - AgreementLabel: EULA
-    AgreementUrl: https://www.dualuniverse.game/legal/eula
 ManifestType: defaultLocale
 ManifestVersion: 1.1.0
 
