Fix Agreements for Package

--- a/manifests/w/Wacom/WacomTabletDriver/6.3.45-1/Wacom.WacomTabletDriver.locale.en-US.yaml
+++ b/manifests/w/Wacom/WacomTabletDriver/6.3.45-1/Wacom.WacomTabletDriver.locale.en-US.yaml
@@ -12,7 +12,7 @@ Author: Wacom Technology, Corp.
 PackageName: Wacom Tablet
 PackageUrl: https://www.wacom.com/support/product-support/drivers
 License: Proprietary
-# LicenseUrl: 
+LicenseUrl: https://www.wacom.com/terms-of-use
 Copyright: Copyright (c) 2018-2022 Wacom. All Rights Reserved.
 # CopyrightUrl: 
 ShortDescription: Drivers for Wacom Tablet.
@@ -20,9 +20,6 @@ ShortDescription: Drivers for Wacom Tablet.
 Moniker: wacomtabletdriver
 Tags:
 - driver
-Agreement: 
-  - AgreementLabel: Terms of use
-    AgreementUrl: https://www.wacom.com/terms-of-use
 ReleaseNotes: |
   • An improved notification process to inform you when new driver, firmware, or BIOS updates are available, allowing you to easily access the most recent updates for your Wacom tablet.
   • For Cintiq Pro: A new option that requires a "long press" to activate the Touch Keys, which helps avoid accidental activation by unintended swipes or brushes of the keys. To turn the feature on, click the Options button at the bottom of Wacom Tablet Properties and select Use long press for Cintiq Pro Touch Keys.
