--- a/manifests/w/Wacom/WacomTabletDriver/6.3.46-1/Wacom.WacomTabletDriver.locale.en-US.yaml
+++ b/manifests/w/Wacom/WacomTabletDriver/6.3.46-1/Wacom.WacomTabletDriver.locale.en-US.yaml
@@ -12,7 +12,7 @@ Author: Wacom Technology, Corp.
 PackageName: Wacom Tablet
 PackageUrl: https://www.wacom.com/support/product-support/drivers
 License: Proprietary
-# LicenseUrl: 
+LicenseUrl: https://www.wacom.com/terms-of-use
 Copyright: Copyright (c) 2018-2022 Wacom. All Rights Reserved.
 # CopyrightUrl: 
 ShortDescription: Drivers for Wacom Tablet.
@@ -20,9 +20,6 @@ ShortDescription: Drivers for Wacom Tablet.
 Moniker: wacomtabletdriver
 Tags:
 - driver
-Agreement: 
-  - AgreementLabel: Terms of use
-    AgreementUrl: https://www.wacom.com/terms-of-use
 ReleaseNotes: |
   • Improved support for Borix FX'S Mocha Pro and Continuum applications.
   • Updated our bundled, third-party drivers to be compatible with the Windows Core Isolation feature.
