--- a/manifests/w/WiseCleaner/WiseDataRecovery/6.1.2/WiseCleaner.WiseDataRecovery.locale.en-US.yaml
+++ b/manifests/w/WiseCleaner/WiseDataRecovery/6.1.2/WiseCleaner.WiseDataRecovery.locale.en-US.yaml
@@ -12,7 +12,7 @@ PrivacyUrl: https://www.wisecleaner.com/privacy.html
 PackageName: Wise Data Recovery
 PackageUrl: https://www.wisecleaner.com/wise-data-recovery.html
 License: Proprietary
-# LicenseUrl: 
+LicenseUrl: https://www.wisecleaner.com/eula.html
 Copyright: Copyright (c) 2006-2022 WiseCleaner. All rights reserved.
 # CopyrightUrl: 
 ShortDescription: Professional Data Recovery Tool
@@ -21,9 +21,6 @@ Moniker: wisedatarecovery
 Tags:
 - data-recovery
 - recovery
-Agreement: 
-  - AgreementLabel: EULA
-    AgreementUrl: https://www.wisecleaner.com/eula.html
 ReleaseNotes: |
   1. Fixed the issue where the next scan gets stuck after previewing deleted files.
   2. Fixed the issue where the recovery gets stuck if the selected drive does not have enough free space.
