--- a/manifests/a/AIMP/AIMP/5.03.2398/AIMP.AIMP.installer.yaml
+++ b/manifests/a/AIMP/AIMP/5.03.2398/AIMP.AIMP.installer.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.1.3 $debug=NVS1.7-2-6
+# Created with YamlCreate.ps1 v2.1.4 $debug=AUSU.5-1-19041-1682
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.installer.1.2.0.schema.json
 
 PackageIdentifier: AIMP.AIMP
-PackageVersion: 5.03.2397
+PackageVersion: 5.03.2398
 MinimumOSVersion: 10.0.0.0
 InstallerType: exe
 Scope: machine
@@ -48,15 +48,14 @@ FileExtensions:
 - wma
 - wv
 - xm
-ReleaseDate: 2022-08-01
 AppsAndFeaturesEntries:
 - ProductCode: AIMP
 Installers:
 - Architecture: x64
-  InstallerUrl: https://aimp.ru/files/windows/builds/aimp_5.03.2397_w64.exe
-  InstallerSha256: 99BE213B6571B3C3782AA1D466F0D905E2414B6C3C8C209849135F514D1A29DE
+  InstallerUrl: https://aimp.ru/files/windows/builds/aimp_5.03.2398_w64.exe
+  InstallerSha256: 64401D34A3394C9A51705EEA9AD7C8BDAAF84034146D34EFA2A4EA1131A80072
 - Architecture: x86
-  InstallerUrl: https://aimp.ru/files/windows/builds/aimp_5.03.2397_w32.exe
-  InstallerSha256: 66E4BAE23ADB70F2CFD5B7C28F83B41FFF2728A889E2FA631B40E6C958408AD5
+  InstallerUrl: https://aimp.ru/files/windows/builds/aimp_5.03.2398_w32.exe
+  InstallerSha256: 4692FA5F2E928FC875BAFBCE4626C33B8E3ED0A1FC7170C01E20603ED221EDCA
 ManifestType: installer
 ManifestVersion: 1.2.0
