--- a/manifests/a/AIMP/AIMP/5.03.2398/AIMP.AIMP.locale.en-US.yaml
+++ b/manifests/a/AIMP/AIMP/5.03.2398/AIMP.AIMP.locale.en-US.yaml
@@ -1,8 +1,8 @@
-# Created with YamlCreate.ps1 v2.1.3 $debug=NVS1.7-2-6
+# Created with YamlCreate.ps1 v2.1.4 $debug=AUSU.5-1-19041-1682
 # yaml-language-server: $schema=https://aka.ms/winget-manifest.defaultLocale.1.2.0.schema.json
 
 PackageIdentifier: AIMP.AIMP
-PackageVersion: 5.03.2397
+PackageVersion: 5.03.2398
 PackageLocale: en-US
 Publisher: AIMP DevTeam
 PublisherUrl: https://www.aimp.ru
@@ -21,6 +21,7 @@ Moniker: aimp
 Tags:
 - audio-player
 - music-player
+# Agreements: 
 # ReleaseNotes: 
 # ReleaseNotesUrl: 
 # PurchaseUrl: 
