Fix Documentations for Package

--- a/manifests/r/RStudio/quarto/1.1.165/RStudio.quarto.locale.en-US.yaml
+++ b/manifests/r/RStudio/quarto/1.1.165/RStudio.quarto.locale.en-US.yaml
@@ -30,10 +30,10 @@ Tags:
 - r
 - reproducibility
 - rmarkdown
-Documentation:
+Documentations:
   - DocumentLabel: Tutorial
     DocumentUrl: https://quarto.org/docs/get-started/
-  - DocumentLabel: Documentation
+  - DocumentLabel: User Guide
     DocumentUrl: https://quarto.org/docs/guide/
 ManifestType: defaultLocale
 ManifestVersion: 1.2.0
