Make Multi-line Field Exclude ending Newline

--- a/manifests/3/360/360Chrome/13.0.2256.0/360.360Chrome.locale.zh-CN.yaml
+++ b/manifests/3/360/360Chrome/13.0.2256.0/360.360Chrome.locale.zh-CN.yaml
@@ -25,7 +25,7 @@ Tags:
 - Internet-Explorer
 - "360"
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   1、修复一个默认皮肤存在的问题
 ReleaseNotesUrl: https://bbs.360.cn/thread-15913525-1-1.html
 ManifestType: locale
