Make Multi-line Field Exclude ending Newline

--- a/manifests/a/AviSynth/AviSynthPlus/3.7.1.3593/AviSynth.AviSynthPlus.locale.en-US.yaml
+++ b/manifests/a/AviSynth/AviSynthPlus/3.7.1.3593/AviSynth.AviSynthPlus.locale.en-US.yaml
@@ -27,7 +27,7 @@ Tags:
 - AVS+
 - AviSynth
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Additions:
   - Linux: Show more information when dlopen fails
   - Expr: allow auto scaling effect on pixels obtained from relative addressing
