Make Multi-line Field Exclude ending Newline

--- a/manifests/a/Axure/AxureRP/10/10.0.0.3854/Axure.AxureRP.10.locale.en-US.yaml
+++ b/manifests/a/Axure/AxureRP/10/10.0.0.3854/Axure.AxureRP.10.locale.en-US.yaml
@@ -25,7 +25,7 @@ Tags:
 - diagrams
 - Axure
 # Agreements: 
-ReleaseNotes: |
+ReleaseNotes: |-
   Feature Updates
   - The style toolbar is now dynamic and provides access to all widget specific style properties from the toolbar (to turn on the style toolbar, go to “View > Toolbars > Style Toolbar”)
   - Dynamic panel toolbar has an updated design and is now draggable Learn More
